--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ python:
     - "2.7"
     - "3.5"
     - "3.6"
-install: "pip install -r requirements.txt"
-script: nose2
+install: 
+    - pip install -r requirements.txt
+    - pip install coveralls
+script:
+    coverage run --source=blogger -m nose2
+after_success:
+    coveralls
