--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
 appdirs==1.4.3
-coverage==4.3.4
-funcsigs==1.0.2
-google-api-python-client==1.6.1
-httplib2==0.9.2
-mock==2.0.0
-nose2==0.6.5
-oauth2client==4.0.0
+EasyBlogger==1.2.8
+google-api-python-client==1.6.2
+httplib2==0.10.3
+oauth2client==4.1.0
 packaging==16.8
-pbr==1.10.0
-pyasn1==0.1.9
+pyasn1==0.2.3
 pyasn1-modules==0.0.8
-pypandoc==1.3.3
-pyparsing==2.1.10
+pypandoc==1.4
+pyparsing==2.2.0
 python-gflags==3.1.1
 rsa==3.4.2
 six==1.10.0
-uritemplate==3.0.0
 toml==0.9.2
+uritemplate==3.0.0
