--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,11 @@
 appdirs==1.4.3
-google-api-python-client==1.6.2
-httplib2==0.10.3
-oauth2client==4.1.0
-packaging==16.8
-pyasn1==0.2.3
-pyasn1-modules==0.0.8
-pypandoc==1.4
-pyparsing==2.2.0
-python-gflags==3.1.1
-rsa==3.4.2
-six==1.10.0
-toml==0.9.2
-uritemplate==3.0.0
+coloredlogs==9.0
+gevent==1.2.2
+google-api-python-client==1.6.5
 mock==2.0.0
-gevent==1.2.1
-nose2==0.6.5
-coloredlogs==7.0
+nose2==0.7.4
+packaging==17.1
+pypandoc==1.4
+python-gflags==3.1.2
+toml==0.9.4
+tox==2.9.1
